--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "adrianmejias/pinecone": "^1.0",
+        "binarycabin/laravel-uuid": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/cashier": "^14.11",
         "laravel/fortify": "^1.16",
@@ -14,6 +16,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "mkocansey/bladewind": "^2.1",
+        "openai-php/client": "^0.4.2",
+        "openai-php/laravel": "^0.4.3",
         "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
