--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "mkocansey/bladewind": "^2.1",
         "openai-php/client": "^0.4.2",
         "openai-php/laravel": "^0.4.3",
