--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "openai-php/laravel": "^0.4.3",
         "pbmedia/laravel-ffmpeg": "^8.3",
         "spatie/image": "^2.2",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-markdown": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
